--- a/example/src/main/resources/application.properties
+++ b/example/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=Spring_Boot_CC1_Login
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.application.name=example
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/crud
 spring.datasource.username=root
 spring.datasource.password=since@2004
+
 
 
 spring.jpa.database=mysql
